--- a/src/pages/custom-solution.astro
+++ b/src/pages/custom-solution.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 import { Cpu, Database, Network } from "@lucide/astro";
 ---
 
-<Layout path="/custom-solution" title="Custom Solutions | Cogito Software">
+<Root path="/custom-solution" title="Custom Solutions | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
       class="grow flex items-center justify-center relative overflow-hidden py-20"
@@ -109,4 +109,4 @@ import { Cpu, Database, Network } from "@lucide/astro";
       </div>
     </section>
   </main>
-</Layout>
+</Root>
