--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,11 @@ import {
   Globe,
 } from "@lucide/astro";
 
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 import Portfolio from "../components/Portfolio.astro";
 ---
 
-<Layout path="/" title="Cogito Software | No Useless Software">
+<Root path="/" title="Cogito Software | No Useless Software">
   <main class="relative min-h-screen flex flex-col overflow-hidden">
     <!-- Hero Section -->
     <section class="relative z-10 pt-32 pb-20 lg:pt-48 lg:pb-32">
@@ -362,4 +362,4 @@ import Portfolio from "../components/Portfolio.astro";
       </div>
     </section>
   </main>
-</Layout>
+</Root>
