--- a/src/pages/partnership.astro
+++ b/src/pages/partnership.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 ---
 
-<Layout path="/partnership" title="Partnership | Cogito Software">
+<Root path="/partnership" title="Partnership | Cogito Software">
   <main class="relative min-h-screen flex flex-col">
     <section
       class="grow flex items-center justify-center relative overflow-hidden py-20"
@@ -80,4 +80,4 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </section>
   </main>
-</Layout>
+</Root>
