--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const { path }: Props = Astro.props;
 ---
 
 <header
-  class="fixed top-0 left-0 w-full z-50 transition-all duration-300 border-b-2 border-base-content/10 bg-base-100/70 backdrop-blur-md"
+  class="fixed top-0 left-0 w-full z-50 transition-all duration-300 border-b border-base-content/10 bg-base-100/70 backdrop-blur-md"
 >
   <div class="container mx-auto px-4 h-16 flex items-center justify-between">
     <!-- Logo -->
@@ -64,7 +64,7 @@ const { path }: Props = Astro.props;
         </div>
         <ul
           tabindex="0"
-          class="menu menu-sm dropdown-content mt-3 z-1 p-2 shadow-none bg-base-100 w-52 border-2 border-base-content/10"
+          class="menu menu-sm dropdown-content mt-3 z-1 p-2 shadow-none bg-base-100 w-52 border border-base-content/10"
         >
           {
             links.map((link) => (
