--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,11 +1,11 @@
 ---
 import { Mail } from "@lucide/astro";
 
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 import ContactForm from "../components/ContactForm.svelte";
 ---
 
-<Layout path="/contact" title="Contact Us | Cogito Software">
+<Root path="/contact" title="Contact Us | Cogito Software">
   <main class="pt-32 pb-20 min-h-screen flex flex-col">
     <div class="container mx-auto px-6 max-w-6xl grow">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:gap-16">
@@ -64,4 +64,4 @@ import ContactForm from "../components/ContactForm.svelte";
       </div>
     </div>
   </main>
-</Layout>
+</Root>
