--- a/src/pages/mvp-offer.astro
+++ b/src/pages/mvp-offer.astro
@@ -1,16 +1,16 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 import Hero from "../components/Hero.astro";
 import TechStack from "../components/TechStack.astro";
 import Portfolio from "../components/Portfolio.astro";
 import Offer from "../components/Offer.astro";
 ---
 
-<Layout path="/mvp-offer" title="Cogito Software | Fast-Track Your MVP">
+<Root path="/mvp-offer" title="Cogito Software | Fast-Track Your MVP">
   <main class="relative min-h-screen bg-base-100 overflow-x-hidden">
     <Hero />
     <TechStack />
     <Portfolio />
     <Offer />
   </main>
-</Layout>
+</Root>
