--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 ---
 
-<Layout title="Privacy Policy | Cogito Software">
+<Root path="/privacy-policy" title="Privacy Policy | Cogito Software">
   <main class="pt-32 pb-20">
     <div class="container mx-auto px-6 max-w-4xl">
       <h1 class="text-4xl md:text-5xl font-bold mb-8">Privacy Policy</h1>
@@ -74,4 +74,4 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </main>
-</Layout>
+</Root>
