--- a/src/pages/terms-and-conditions.astro
+++ b/src/pages/terms-and-conditions.astro
@@ -1,8 +1,11 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Root from "../layouts/Root.astro";
 ---
 
-<Layout title="Terms and Conditions | Cogito Software">
+<Root
+  path="/terms-and-conditions"
+  title="Terms and Conditions | Cogito Software"
+>
   <main class="pt-32 pb-20">
     <div class="container mx-auto px-6 max-w-4xl">
       <h1 class="text-4xl md:text-5xl font-bold mb-8">Terms and Conditions</h1>
@@ -67,4 +70,4 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </main>
-</Layout>
+</Root>
