--- a/src/layouts/Zero.astro
+++ b/src/layouts/Zero.astro
@@ -4,21 +4,30 @@ import Background from "../components/Background.astro";
 import MetaPixelCode from "../components/MetaPixelCode.astro";
 import ThemeController from "../components/ThemeController.svelte";
 import Posthog from "../components/Posthog.astro";
+import SmoothScroll from "../components/SmoothScroll.astro";
 
 interface Props {
   path?: string;
   title?: string;
+  favicon?: string;
 }
 
-const { path = "/", title = "Cogito Software" }: Props = Astro.props;
+const {
+  path = "/",
+  title = "Cogito Software",
+  favicon = "/favicon_io/favicon.ico",
+}: Props = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
+    />
+    <link rel="icon" type="image/svg+xml" href={favicon} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
@@ -30,10 +39,13 @@ const { path = "/", title = "Cogito Software" }: Props = Astro.props;
     <Posthog />
     <MetaPixelCode />
   </head>
-  <body class="min-h-screen bg-base-100 text-base-content antialiased">
+  <body
+    class="min-h-screen overflow-x-hidden bg-base-100 text-base-content antialiased"
+  >
+    <SmoothScroll />
     <Background />
 
-    <header class="flex items-center py-2 px-8 justify-end w-full">
+    <header class="flex items-center py-2 px-4 md:px-8 justify-end w-full">
       <ThemeController client:load />
     </header>
     <slot />
