--- a/src/layouts/Zero.astro
+++ b/src/layouts/Zero.astro
@@ -42,7 +42,7 @@ const {
   <body
     class="min-h-screen overflow-x-hidden bg-base-100 text-base-content antialiased"
   >
-    <SmoothScroll />
+    <!-- <SmoothScroll /> -->
     <Background />
 
     <header class="flex items-center py-2 px-4 md:px-8 justify-end w-full">
