--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
 
-import Quizbee from "../assets/quizbee.png";
-import Growplex from "../assets/growplex.png";
-import Hackseeker from "../assets/hackseeker.png";
+import Quizbee from "$assets/quizbee.png";
+import Growplex from "$assets/growplex.png";
+import Hackseeker from "$assets/hackseeker.png";
 
 const projects = [
   {
