--- a/src/layouts/Zero.astro
+++ b/src/layouts/Zero.astro
@@ -1,9 +1,9 @@
 ---
-import Footer from "../components/Footer.astro";
-import Background from "../components/Background.astro";
-import MetaPixelCode from "../components/MetaPixelCode.astro";
-import Posthog from "../components/Posthog.astro";
-import SmoothScroll from "../components/SmoothScroll.astro";
+import Footer from "$components/Footer.astro";
+import Background from "$components/Background.astro";
+import MetaPixelCode from "$components/MetaPixelCode.astro";
+import Posthog from "$components/Posthog.astro";
+import SmoothScroll from "$components/SmoothScroll.astro";
 
 interface Props {
   path?: string;
