--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,8 @@
 ---
 import { Mail } from "@lucide/astro";
 
-import Root from "../layouts/Root.astro";
-import ContactForm from "../components/ContactForm.svelte";
+import Root from "$layouts/Root.astro";
+import ContactForm from "$components/ContactForm.svelte";
 ---
 
 <Root path="/contact" title="Contact Us | Cogito Software">
