--- a/src/pages/custom-solution.astro
+++ b/src/pages/custom-solution.astro
@@ -1,5 +1,5 @@
 ---
-import Root from "../layouts/Root.astro";
+import Root from "$layouts/Root.astro";
 import { Cpu, Database, Network } from "@lucide/astro";
 ---
 
