--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import {
   Globe,
 } from "@lucide/astro";
 
-import Root from "../layouts/Root.astro";
-import Portfolio from "../components/Portfolio.astro";
+import Root from "$layouts/Root.astro";
+import Portfolio from "$components/Portfolio.astro";
 ---
 
 <Root path="/" title="Cogito Software | No Useless Software">
