--- a/src/layouts/Root.astro
+++ b/src/layouts/Root.astro
@@ -1,11 +1,11 @@
 ---
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import Background from "../components/Background.astro";
-import MetaPixelCode from "../components/MetaPixelCode.astro";
-import Posthog from "../components/Posthog.astro";
-import SmoothScroll from "../components/SmoothScroll.astro";
+import "$styles/global.css";
+import Header from "$components/Header.astro";
+import Footer from "$components/Footer.astro";
+import Background from "$components/Background.astro";
+import MetaPixelCode from "$components/MetaPixelCode.astro";
+import Posthog from "$components/Posthog.astro";
+import SmoothScroll from "$components/SmoothScroll.astro";
 
 interface Props {
   path?: string;
