--- a/src/pages/magiclink/index.astro
+++ b/src/pages/magiclink/index.astro
@@ -28,9 +28,9 @@ import {
   Palette,
 } from "@lucide/astro";
 
-import Zero from "../../layouts/Zero.astro";
-import WaitlistForm from "../../components/WaitlistForm.svelte";
-import ThemeController from "../../components/ThemeController.svelte";
+import Zero from "$layouts/Zero.astro";
+import WaitlistForm from "$components/WaitlistForm.svelte";
+import ThemeController from "$components/ThemeController.svelte";
 
 import Widget from "./_Widget.svelte";
 import "./_styles.css";
