--- a/src/pages/mvp-offer.astro
+++ b/src/pages/mvp-offer.astro
@@ -1,9 +1,9 @@
 ---
-import Root from "../layouts/Root.astro";
-import Hero from "../components/Hero.astro";
-import TechStack from "../components/TechStack.astro";
-import Portfolio from "../components/Portfolio.astro";
-import Offer from "../components/Offer.astro";
+import Root from "$layouts/Root.astro";
+import Hero from "$components/Hero.astro";
+import TechStack from "$components/TechStack.astro";
+import Portfolio from "$components/Portfolio.astro";
+import Offer from "$components/Offer.astro";
 ---
 
 <Root path="/mvp-offer" title="Cogito Software | Fast-Track Your MVP">
