--- a/src/pages/partnership.astro
+++ b/src/pages/partnership.astro
@@ -1,5 +1,5 @@
 ---
-import Root from "../layouts/Root.astro";
+import Root from "$layouts/Root.astro";
 ---
 
 <Root path="/partnership" title="Partnership | Cogito Software">
