--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,5 +1,5 @@
 ---
-import Root from "../layouts/Root.astro";
+import Root from "$layouts/Root.astro";
 ---
 
 <Root path="/privacy-policy" title="Privacy Policy | Cogito Software">
