--- a/src/layouts/Root.astro
+++ b/src/layouts/Root.astro
@@ -16,7 +16,7 @@ const { path = "/", title = "Cogito Software" }: Props = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="overflow-x-hidden">
+<html lang="en" class="scroll-smooth overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta
